<resources>
    <string name="app_name">Myro</string>
    <string name="Author">મારી અંજુબાની ટાઈગર મેલડી</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="email_address">Enter Your Email Address</string>
    <string name="password">Enter your Password</string>
    <string name="create_new_account">No Account?Create One</string>
    <string name="login">Login</string>
    <string name="enter_phone">Enter Your Phone Number</string>
    <string name="login_with_phone_num">Login with Phone Num</string>
    <string name="verify">Verify</string>
    <string name="we_have_sent_you_a_6_digit_verification_code_on">We have sent you a 6 digit verification code on</string>
    <string name="enter_verification_code">Enter verification code</string>
    <string name="home">Home</string>
    <string name="search">Search</string>
    <string name="cart">Cart</string>
    <string name="setting">Setting</string>
    <string name="phone_number_login">Phone Number Login</string>
    <string name="custom_email_login">Custom Email Login</string>
    <string name="delivering_to">Delivering to</string>
    <string name="i_need">What are you Searching for</string>
    <string name="product">Product</string>
    <string name="price">Price</string>
    <string name="add_to_cart">Add to cart</string>
    <string name="discount_upto">discount up to</string>
    <string name="search_product">Search Product</string>
    <string name="basic_information">Basic Information</string>
    <string name="your_first_name">Your First Name</string>
    <string name="your_last_name">Your Last name</string>
    <string name="your_city">Your City</string>
    <string name="enter_your_address">Enter your Address</string>
    <string name="are_you_vegetarian">Are you Vegetarian?</string>
    <string name="next">Next</string>
    <string name="login_credentials">Login Credentials</string>
    <string name="enter_your_email_address">Enter your Email Address</string>
    <string name="enter_your_mobile_number">Enter your mobile Number</string>
    <string name="enter_your_password">Enter your Password</string>
    <string name="confirm_your_password">Confirm your password</string>
    <string name="signup">Signup</string>
    <string name="log_out">Log out</string>
    <string name="get_on_time_delivery">Get on Time Delivery</string>
    <string name="at_your_door_steps">At your Door Steps</string>
    <string name="contactless_delivery">Contactless Delivery</string>
    <string name="get_started">Get Started</string>
    <string name="quantity">Quantity:</string>
    <string name="_onenumber">1</string>
    <string name="add_items_first_hurry">Add Items First! Hurry</string>
    <string name="your_total_is">Your Total is</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="feedback">Feedback</string>
    <string name="about_me">About Me</string>
    <string name="enter_your_feedback_here">Enter your Feedback Here</string>
    <string name="submit">submit</string>
    <string name="buy">Buy</string>
    <string name="_21mca141">21MCA141</string>
    <string name="solanki_parth_r">Solanki Parth R</string>
    <string name="mca_ii">MCA-II</string>
    <string name="ca854_mat_case_study">CA854 MAT CASE STUDY</string>
    <string name="myro_grocery_buying_app">MYRO GROCERY BUYING APP</string>
    <string name="submitted_to_prof_ms_pooja_patel">Submitted to: Prof:Ms.Pooja Patel</string>

</resources>