<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="80dp"
    tools:context=".mainScreens.SettingFragment">

    <ImageView
        android:id="@+id/logo"
        android:layout_width="match_parent"
        android:layout_height="150dp"
        android:layout_marginTop="52dp"
        android:contentDescription="@string/app_name"
        android:src="@drawable/shoppingbag"
        app:layout_constraintTop_toTopOf="parent"
        tools:layout_editor_absoluteX="0dp" />


    <TextView
        android:id="@+id/settingname"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="40sp"
        android:theme="@style/appnametext"
        app:layout_constraintTop_toBottomOf="@+id/logo"
        tools:layout_editor_absoluteX="0dp" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/About"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginBottom="27dp"
        android:fontFamily="@font/noto_serif"
        android:gravity="center"
        android:padding="10sp"
        android:text="@string/about_me"
        android:textColor="@color/white"
        android:textSize="17sp"
        android:textStyle="bold"
        app:backgroundTint="@color/black"
        app:backgroundTintMode="src_over"
        app:cornerRadius="10dp"
        app:elevation="20sp"
        android:layout_margin="20dp"
        app:layout_constraintBottom_toTopOf="@+id/Feedback"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/Feedback"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginBottom="27dp"
        android:fontFamily="@font/noto_serif"
        android:gravity="center"
        android:padding="10sp"
        android:text="@string/feedback"
        android:textColor="@color/white"
        android:textSize="17sp"
        android:textStyle="bold"
        app:backgroundTint="@color/black"
        app:backgroundTintMode="src_over"
        app:cornerRadius="10dp"
        app:elevation="20sp"
        android:layout_margin="20dp"
        app:layout_constraintBottom_toTopOf="@+id/Editprofile"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />
    <com.google.android.material.button.MaterialButton
        android:id="@+id/Editprofile"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginBottom="27dp"
        android:fontFamily="@font/noto_serif"
        android:gravity="center"
        android:padding="10sp"
        android:text="@string/edit_profile"
        android:textColor="@color/white"
        android:textSize="17sp"
        android:textStyle="bold"
        app:backgroundTint="@color/black"
        app:backgroundTintMode="src_over"
        app:cornerRadius="10dp"
        app:elevation="20sp"
        android:layout_margin="20dp"
        app:layout_constraintBottom_toTopOf="@+id/Logoutbtn"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/Logoutbtn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginBottom="24dp"
        android:fontFamily="@font/noto_serif"
        android:gravity="center"
        android:padding="10sp"
        android:layout_margin="20dp"
        android:text="@string/log_out"
        android:textColor="@color/white"
        android:textSize="17sp"
        android:textStyle="bold"
        app:backgroundTint="@color/red"
        app:backgroundTintMode="src_over"
        app:cornerRadius="10dp"
        app:elevation="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />


</androidx.constraintlayout.widget.ConstraintLayout>
