<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".loginRegister.Signupbasic">

    <TextView
        android:id="@+id/signuptext"
        style="@style/normaltext"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="60dp"
        android:text="@string/basic_information"
        android:textAlignment="center"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:id="@+id/s1"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="1dp"
        android:paddingStart="15dp"
        android:paddingTop="1dp"
        android:paddingEnd="10dp"
        android:theme="@style/textlabel"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/signuptext">

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/firstname"
            style="@style/inputlayout"
            app:placeholderText="@string/your_first_name">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/your_first_name"
              android:theme="@style/inputedittext"
                />
        </com.google.android.material.textfield.TextInputLayout>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/s2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="1dp"
        android:paddingStart="15dp"
        android:paddingTop="1dp"
        android:paddingEnd="10dp"
        android:theme="@style/textlabel"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/s1">

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/lastname"
            style="@style/inputlayout"
            app:placeholderText="@string/your_last_name">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/your_last_name"
                android:theme="@style/inputedittext"
                />

        </com.google.android.material.textfield.TextInputLayout>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/s3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingStart="10dp"
        android:paddingEnd="10dp"
        android:theme="@style/textlabel"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/s2">

        <com.google.android.material.textfield.TextInputLayout
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/your_city"
            android:padding="10dp"
            android:background="@color/white"
           app:placeholderText="@string/your_city"
            >


            <AutoCompleteTextView
                android:id="@+id/city"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@color/white"
                android:textColor="@color/black"
                android:inputType="none"
                tools:ignore="LabelFor" />

        </com.google.android.material.textfield.TextInputLayout>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/s4"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="1dp"
        android:paddingStart="15dp"
        android:paddingTop="1dp"
        android:paddingEnd="10dp"
        android:theme="@style/textlabel"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/s3">

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/address"
            style="@style/inputlayout"
            app:placeholderText="@string/enter_your_address">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:lines="3"
                android:hint="@string/enter_your_address"
                android:theme="@style/inputedittext"
                />

        </com.google.android.material.textfield.TextInputLayout>
    </LinearLayout>


    <com.google.android.material.switchmaterial.SwitchMaterial
        android:id="@+id/vegetarianswitch"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/s4" />

    <TextView
        style="@style/normaltext"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="14dp"
        android:text="@string/are_you_vegetarian"
        android:textSize="16sp"
        app:layout_constraintEnd_toStartOf="@+id/vegetarianswitch"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/s4" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/signupnext"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="4dp"
        android:fontFamily="@font/noto_serif"
        android:gravity="center"
        android:padding="10sp"
        android:text="@string/next"
        android:textColor="@color/white"
        android:textSize="17sp"
        android:textStyle="bold"
        app:backgroundTint="@color/black"
        app:backgroundTintMode="src_over"
        app:cornerRadius="10dp"
        app:elevation="20sp"
        app:icon="@drawable/arrow_forward_24"
        app:iconGravity="end"

        android:layout_marginStart="4dp"
        app:iconSize="20sp"
        app:iconTint="@color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/vegetarianswitch"
        app:layout_constraintVertical_bias="0.961" />

    <com.google.android.material.imageview.ShapeableImageView
        android:id="@+id/signupbackbtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:padding="10dp"
        app:layout_constraintStart_toStartOf="@+id/signuptext"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/ic_arrow_back" />
</androidx.constraintlayout.widget.ConstraintLayout>

