<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".loginRegister.Signupprivacy">

    <TextView
        android:id="@+id/signupprivacytext"
        style="@style/normaltext"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="80dp"
        android:text="@string/login_credentials"
        android:textAlignment="center"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:id="@+id/s1"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="1dp"
        android:paddingStart="15dp"
        android:paddingTop="1dp"
        android:paddingEnd="10dp"
        android:theme="@style/textlabel"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/signupprivacytext">

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/emailid"
            style="@style/inputlayout"
            app:placeholderText="@string/enter_your_email_address">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/enter_your_email_address"
                android:theme="@style/inputedittext" />
        </com.google.android.material.textfield.TextInputLayout>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/s2"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="1dp"
        android:paddingStart="15dp"
        android:paddingTop="1dp"
        android:paddingEnd="10dp"
        android:theme="@style/textlabel"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/s1">

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/mobilenum"
            style="@style/inputlayout"
            app:placeholderText="@string/enter_your_mobile_number">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:maxLength="10"
                android:hint="@string/enter_your_mobile_number"
                android:theme="@style/inputedittext" />
        </com.google.android.material.textfield.TextInputLayout>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/s3"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="1dp"
        android:paddingStart="15dp"
        android:paddingTop="1dp"
        android:paddingEnd="10dp"
        android:theme="@style/textlabel"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/s2">

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/password"
            style="@style/inputlayout"
            app:endIconMode="password_toggle"
            app:placeholderText="@string/enter_your_password">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/enter_your_password"
                android:inputType="textPassword"
                android:theme="@style/inputedittext" />
        </com.google.android.material.textfield.TextInputLayout>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/s4"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="1dp"
        android:paddingStart="15dp"
        android:paddingTop="1dp"
        android:paddingEnd="10dp"
        android:theme="@style/textlabel"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/s3">

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/confirmpassword"
            style="@style/inputlayout"
            app:endIconMode="password_toggle"
            app:placeholderText="@string/confirm_your_password">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/confirm_your_password"
                android:inputType="textPassword"
                android:theme="@style/inputedittext" />
        </com.google.android.material.textfield.TextInputLayout>
    </LinearLayout>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/signupbtn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="4dp"
        android:layout_marginStart="4dp"
        android:fontFamily="@font/noto_serif"
        android:gravity="center"
        android:padding="10sp"
        android:text="@string/signup"
        android:textColor="@color/white"
        android:textSize="17sp"
        android:textStyle="bold"
        app:backgroundTint="@color/black"
        app:backgroundTintMode="src_over"
        app:cornerRadius="10dp"
        app:elevation="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/s4"
        app:layout_constraintVertical_bias="1.0" />


    <com.google.android.material.imageview.ShapeableImageView
        android:id="@+id/signupbacktofirstbtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:padding="10dp"
        app:layout_constraintStart_toStartOf="@+id/signupprivacytext"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/ic_arrow_back" />


</androidx.constraintlayout.widget.ConstraintLayout>
